--- a/style.css
+++ b/style.css
@@ -3,21 +3,51 @@
   padding: 0;
   font-family: sans-serif;
   font-size: 16px;
+  box-sizing: border-box;
 }
-.root textarea {
-  width: calc(100% - 18px);
+body {
+  background-color: #ccc;
+}
+.root .input {
   height: 200px;
-  padding: 8px;
-  outline: unset;
 }
-.root .container > button {
+.root .input > button {
   display: block;
   margin: auto;
   width: 100px;
-  /* margin-bottom: 10px; */
 }
+.root .input .container {
+  position: relative;
+  height: calc(100% - 22px);
+
+}
+.root .input .container .backdrop {
+  --position-div: 0;
+  position: absolute;
+  top: var(--position-div);
+  right: var(--position-div);
+  left: var(--position-div);
+  bottom: var(--position-div);
+  z-index: -1;
+  border: 1px solid #685972;
+  overflow: auto;
+  pointer-events: none;
+  padding: 8px;
+  color: transparent;
+}
+.root .input .container > textarea {
+  width: 100%;
+  height: 100%;
+  padding: 8px;
+  outline: unset;
+  background-color: transparent;
+  resize: none;
+  z-index: 10;
+}
+
+
 .result {
-  height: calc(100vh - 264px);
+  height: calc(100vh - 200px);
   overflow-y: scroll;
 }
 .result .child {
@@ -35,7 +65,7 @@
   right: var(--button-size);
   top: var(--button-size);
 }
-.result .child span {
+span {
   background-color: yellow;
 }
 .result .child.set-height {
