--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ span {
   display: block;
   margin: auto;
   width: 100px;
+  border: 1px solid #ccc;
 }
 .root .input .container {
   position: relative;
