--- a/style.css
+++ b/style.css
@@ -19,34 +19,37 @@ span {
   border-radius: 6px;
   background-color: #3dbdee;
 }
-.root {
+#root {
   position: relative;
 }
-.root .input {
+#root .input {
   height: 200px;
 }
-.root .input > button {
-  display: block;
-  width: 140px;
-  margin: 4px auto 0;
+#root .input .btn {
+  padding: 4px 0;
+  text-align: center;
+}
+  #root .input .btn > button {
+  width: 100px;
   border: 1px solid #aaa;
   border-radius: 4px;
   background-image: linear-gradient(to left, #3dbdee, #3dbdee);
   background-size: 0% 100%;
   background-repeat: no-repeat;
   transition: 0.3s linear;
+  user-select: none;
 }
-.root .input > button:hover {
+#root .input .btn > button:hover {
   background-image: linear-gradient(to left, #3dbdee, #3dbdee);
   background-size: 100% 100%;
   background-color: #3dbdee;
 }
-.root .input .container {
+#root .input .container {
   position: relative;
-  height: calc(100% - 22px);
+  height: calc(100% - 28px);
 
 }
-.root .input .container .backdrop {
+#root .input .container .backdrop {
   --position-div: 0;
   position: absolute;
   top: var(--position-div);
@@ -60,7 +63,7 @@ span {
   padding: 8px;
   color: transparent;
 }
-.root .input .container > textarea {
+#root .input .container > textarea {
   width: 100%;
   height: 100%;
   padding: 8px;
@@ -68,32 +71,48 @@ span {
   background-color: transparent;
   resize: none;
   z-index: 10;
+  user-select: none;
 }
-.result {
-  height: calc(100vh - 200px - 8px);
+#root .space {
+  background-color: #3dbdee;
+  padding: 2px 0;
+  cursor: row-resize;
+}
+
+#root .result {
+  height: calc(100vh - 200px - 4px);
   overflow-y: scroll;
-  margin-top: 8px;
+  padding: 8px;
 }
-.result .child {
-  margin: 10px 10px 0;
+#root .result .child {
+  margin: 10px 0 0;
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 8px;
   background-color: #eee;
   position: relative;
   overflow: hidden;
+  overflow-y: scroll;
+  max-height: 500px;
+  transition: all 0.5s ease;
 }
-.result .child:first-child {
+#root .result .child:first-child {
   margin-top: 0;
 }
-.result .child .closeBtn {
+#root .result .child .toggleBtn {
   --button-size: 8px;
   position: absolute;
   right: var(--button-size);
   top: var(--button-size);
+  user-select: none;
 }
-.result .child.set-height {
-  height: 38px;
+#root .result .child.set-height {
+  max-height: 38px;
+}
+#root .result .child .title {
+  text-align: center;
+  color: #1a6481;
+  user-select: none;
 }
 .logo {
   position: absolute;
