--- a/style.css
+++ b/style.css
@@ -50,11 +50,11 @@ span {
 
 }
 #root .input .btn > button {
-  width: 100px;
+  padding: 4px 20px;
 }
 #root .input .container {
   position: relative;
-  height: calc(100% - 28px);
+  height: calc(100% - 36px);
   margin: 8px 8px 0;
 }
 #root .input .container .backdrop {
@@ -90,7 +90,6 @@ span {
   padding: 2px 0;
   cursor: row-resize;
 }
-
 #root .result {
   height: calc(100vh - 200px - 4px - 8px) ;
   overflow-y: scroll;
