--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body {
   background-color: #ddd;
 }
-.bd93f10 {
+.bd93f9-span {
   background-color: rgb(29, 243, 136);
   border-radius: 6px;
   font-size: inherit;
@@ -20,7 +20,10 @@ body {
   border-radius: 6px;
   background-color: #3dbdee;
 }
-.bd93f9 {
+:root {
+  --screen-split: 4px;
+}
+.bd93f9-button {
   border: 1px solid #aaa;
   border-radius: 4px;
   background-image: linear-gradient(to left, #3dbdee, #3dbdee);
@@ -37,9 +40,25 @@ body {
 }
 #root {
   position: relative;
+  display: flex;
+  height: 100vh;
 }
-#root .top {
-  height: 200px;
+#root > div:first-child,
+#root > div:last-child {
+  width: calc(50% - (var(--screen-split) / 2));
+}
+#root > div:first-child .input,
+#root > div:last-child .result {
+  margin: 8px 8px 0;
+  height: calc(100% - 36px - 8px);
+  position: relative;
+  padding: 8px;
+  outline: unset;
+  user-select: none;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  overflow-y: scroll;
 }
 #root .top .btn {
   padding: 4px 0;
@@ -48,64 +67,17 @@ body {
 }
 #root .top .btn .reset {
   float: right;
-
 }
 #root .top .btn > button {
   padding: 4px 20px;
 }
 #root .top .input {
-  position: relative;
-  height: calc(100% - 36px);
-  margin: 8px 8px 0;
-  background-color: red;
-  padding: 8px;
-  outline: unset;
-  user-select: none;
-  border-radius: 8px;
-  background: #fff;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  overflow-y: scroll;
 
 }
-#root .top .input .backdrop {
-  --position-div: 0;
-  position: absolute;
-  top: var(--position-div);
-  right: var(--position-div);
-  left: var(--position-div);
-  bottom: var(--position-div);
-  z-index: -1;
-  border: 1px solid #ccc;
-  overflow: auto;
-  pointer-events: none;
-  padding: 8px;
-  color: transparent;
-  border-radius: 8px;
-  background: #fff;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
-#root .top .input > textarea {
-  width: 100%;
+#root .right {
   height: 100%;
-  padding: 8px;
-  outline: unset;
-  background-color: transparent;
-  resize: none;
-  z-index: 10;
-  user-select: none;
-  border-color: transparent;
 }
-#root .space {
-  background-color: #3dbdee;
-  padding: 2px 0;
-  cursor: row-resize;
-}
-#root .result {
-  height: calc(100vh - 200px - 4px - 8px) ;
-  overflow-y: scroll;
-  padding: 8px;
-}
-#root .result .child {
+#root .right .result .child {
   margin: 10px 0 0;
   padding: 8px;
   border: 1px solid #ccc;
@@ -117,16 +89,16 @@ body {
   transition: all 0.5s ease;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
-#root .result .child.dragging {
+#root .right .result .child.dragging {
   opacity: 0.2;
 }
-#root .result .child:first-child {
+#root .right .result .child:first-child {
   margin-top: 0;
 }
-#root .result .child.set-height {
+#root .right .result .child.set-height {
   max-height: 34px;
 }
-#root .result .child .title {
+#root .right .result .child .title {
   display: flex;
   justify-content: space-between;
   justify-items: center;
@@ -136,25 +108,31 @@ body {
   color: #1a6481;
   user-select: none;
 }
-#root .result .child .title .left {
+#root .right .result .child .title .left {
   cursor: move;
 }
-#root .result .child .title .mid {
+#root .right .result .child .title .mid {
   background-color: unset;
   font-weight: 700;
 }
 #root .result .child .title .right {
   padding: 0 8px;
 }
-#root .result .child .content {
+#root .right .result .child .content {
   padding-top: 4px;
 }
-.logo {
+#root .space {
+  background-color: #3dbdee;
+  padding: 0 calc(var(--screen-split)/2);
+  cursor: row-resize;
+}
+#root .logo {
   position: absolute;
   right: 12px;
   bottom: 12px;
+  z-index: 999;
 }
-.logo img {
+#root .logo img {
   --logo-size: 40px;
   width: var(--logo-size);
   height: var(--logo-size);
