--- a/base.css
+++ b/base.css
@@ -3,6 +3,7 @@
   padding: 0;
   font-family: sans-serif;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 body {
   background-color: #ddd;
@@ -14,7 +15,7 @@ body {
   --scrollbar-style: 20px;
   --scrollbar-style-thumb: 4px; 
 }
-.bd93f9-span {
+.hn {
   background-color: rgb(129, 252, 191);
   border-radius: 4px;
   font-size: inherit;
@@ -38,6 +39,8 @@ body {
   color: #fff;
   background-color: var(--main-color);
 }
+
+
 .scrollbar-style::-webkit-scrollbar {
   width: var(--scrollbar-style);
 }
